<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/switch_delete_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"

    android:text="@string/eliminar_pokemon" />

    <Button
        android:id="@+id/button_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary"
        android:text="@string/cambiar_idioma"/>
    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary"
        android:text="@string/acerca_de"
        />
    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary"

        android:text="@string/cerrar_sesion"
         />
</LinearLayout>
